--- a/src/style/main.css
+++ b/src/style/main.css
@@ -652,6 +652,55 @@ footer .footer-copyright span {
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default {
   height: calc(100vh - 60px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder h3 {
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 0;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder p {
+  color: white;
+  font-family: learn-serbian-light;
+  font-size: 25px;
+  margin: 0;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder button {
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 25px;
+  background-color: #1466c7;
+  border: 1px solid transparent;
+  border-radius: 15px;
+  cursor: pointer;
+  padding: 15px;
+  transition: 300ms;
+  font-size: 20px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder button:hover {
+  background-color: #282088;
+  border: 1px solid white;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default img {
+  height: 300px;
+  width: 300px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
