useScrollBlock() custom hook

--- a/src/style/additional/_mixins.scss
+++ b/src/style/additional/_mixins.scss
@@ -29,3 +29,13 @@
         border: 1px solid white;
     }
 }
+
+@mixin no-scrollbar {
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
