--- a/src/style/main.css
+++ b/src/style/main.css
@@ -349,7 +349,12 @@ footer .footer-copyright span {
 
 #lessons {
   position: relative;
-  overflow: hidden;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+#lessons::-webkit-scrollbar {
+  display: none;
 }
 #lessons header {
   position: relative;
@@ -441,7 +446,7 @@ footer .footer-copyright span {
   font-size: 25px;
 }
 #lessons .lessons-holder .lessons-tree-holder {
-  height: 100%;
+  max-height: 100%;
   width: 40%;
   display: flex;
   align-items: center;
@@ -595,11 +600,17 @@ footer .footer-copyright span {
   height: 100vh;
   width: 100vw;
   background: linear-gradient(#1a1632, #170925);
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   position: absolute;
   top: 100%;
   left: 0;
   transition: 500ms;
   z-index: 2;
+}
+#lessons .lessons-inner::-webkit-scrollbar {
+  display: none;
 }
 #lessons .lessons-inner .lessons-inner-header {
   height: 50px;
@@ -610,7 +621,11 @@ footer .footer-copyright span {
   justify-content: space-between;
   background-color: rgba(45, 42, 56, 0.7);
   box-shadow: 0px 1px 5px 0px rgba(255, 255, 255, 0.4);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
   padding: 5px 50px;
+  position: sticky;
+  top: 0;
 }
 #lessons .lessons-inner .lessons-inner-header .lessons-inner-header-points-holder {
   display: flex;
