--- a/src/style/pages/lessons/inner/_main.scss
+++ b/src/style/pages/lessons/inner/_main.scss
@@ -2,6 +2,7 @@
     height: 100vh;
     width: 100vw;
     background: linear-gradient($gradient-first, $gradient-second);
+    @include no-scrollbar;
     position: absolute;
     top: 100%;
     left: 0;
