--- a/src/style/main.css
+++ b/src/style/main.css
@@ -40,6 +40,7 @@ body {
   font-family: learn-serbian;
   box-sizing: border-box;
   background: linear-gradient(#1a1632, #170925);
+  scroll-behavior: smooth;
 }
 
 header {
