--- a/src/style/pages/lessons/_lessons-tree.scss
+++ b/src/style/pages/lessons/_lessons-tree.scss
@@ -27,6 +27,7 @@
 
             strong {
                 color: $dark-purple;
+                font-family: learn-serbian-nunito;
                 font-size: set-size(sm);
                 z-index: 1;
             }
