--- a/src/style/main.css
+++ b/src/style/main.css
@@ -145,6 +145,12 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+body img {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  -webkit-user-drag: none;
+}
 
 header {
   position: sticky;
@@ -770,14 +776,15 @@ footer .footer-copyright span {
   flex-direction: row;
   flex-direction: column;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block {
   height: calc(100vh - 60px);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  gap: 15px;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block .lessons-inner-block-holder {
   width: 40%;
   display: flex;
   align-items: center;
@@ -787,20 +794,20 @@ footer .footer-copyright span {
   align-items: flex-start;
   gap: 20px;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder h3 {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block .lessons-inner-block-holder h3 {
   color: white;
   font-family: learn-serbian-medium;
   font-size: 40px;
   font-weight: bold;
   margin: 0;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder p {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block .lessons-inner-block-holder p {
   color: white;
   font-family: learn-serbian-light;
-  font-size: 25px;
+  font-size: 20px;
   margin: 0;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder button {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block .lessons-inner-block-holder button {
   color: white;
   font-family: learn-serbian-medium;
   font-size: 25px;
@@ -812,46 +819,15 @@ footer .footer-copyright span {
   transition: 300ms;
   font-size: 20px;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default .lessons-inner-default-holder button:hover {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block .lessons-inner-block-holder button:hover {
   background-color: #282088;
   border: 1px solid white;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-default img {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-block img {
   height: 300px;
   width: 300px;
   -o-object-fit: contain;
      object-fit: contain;
-}
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice {
-  height: calc(100vh - 60px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 15px;
-}
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder {
-  width: 40%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
-}
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder h3 {
-  color: white;
-  font-family: learn-serbian-medium;
-  font-size: 40px;
-  font-weight: bold;
-  margin: 0;
-}
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder p {
-  color: white;
-  font-family: learn-serbian-light;
-  font-size: 20px;
-  margin: 0;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder {
   width: 100%;
@@ -880,6 +856,106 @@ footer .footer-copyright span {
   border: 1px solid white;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder button {
+  background-color: #2d2a38;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder {
+  width: 100%;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder h3 {
+  font-size: 35px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-description-holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 15px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-description-holder span {
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background-color: #1466c7;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  position: relative;
+  transition: 300ms;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-description-holder span:hover {
+  background-color: #282088;
+  border: 2px solid white;
+  border-radius: 20px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-description-holder span img {
+  height: 30px;
+  width: 30px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 150ms;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-description-holder span:hover img {
+  height: 25px;
+  width: 25px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-description-holder p {
+  color: white;
+  font-size: 25px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea {
+  height: 200px;
+  width: 100%;
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 20px;
+  background-color: rgba(96, 96, 96, 0.5);
+  border: 3px solid white;
+  border-radius: 10px;
+  padding: 10px 5px;
+  resize: none;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea::-moz-placeholder {
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 20px;
+  padding: 10px 5px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea::placeholder {
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 20px;
+  padding: 10px 5px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea:focus {
+  outline: none;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder .lessons-inner-translate-letters-holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder .lessons-inner-translate-letters-holder button {
+  height: 35px;
+  width: 35px;
   color: white;
   font-family: learn-serbian-medium;
   font-size: 25px;
@@ -889,18 +965,17 @@ footer .footer-copyright span {
   cursor: pointer;
   padding: 15px;
   transition: 300ms;
-  font-size: 20px;
-  background-color: #2d2a38;
+  font-size: 15px;
+  background-color: rgba(20, 102, 199, 0.5);
+  border-radius: 7px;
+  padding: 5px 7px;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder button:hover {
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder .lessons-inner-translate-letters-holder button:hover {
   background-color: #282088;
   border: 1px solid white;
 }
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice img {
-  height: 300px;
-  width: 300px;
-  -o-object-fit: contain;
-     object-fit: contain;
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder button {
+  background-color: #2d2a38;
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
