--- a/src/style/additional/_mixins.scss
+++ b/src/style/additional/_mixins.scss
@@ -39,3 +39,9 @@
         display: none;
     }
 }
+
+@mixin white-shadow {
+    box-shadow: 0px 5px 10px 0px rgba(255,255,255,.5);
+    -webkit-box-shadow: 0px 5px 10px 0px rgba(255,255,255,.5);
+    -moz-box-shadow: 0px 5px 10px 0px rgba(255,255,255,.5);
+}
