--- a/src/style/main.css
+++ b/src/style/main.css
@@ -929,7 +929,17 @@ footer .footer-copyright span {
   border: 3px solid white;
   border-radius: 10px;
   padding: 10px 5px;
+  position: relative;
+  top: 0;
   resize: none;
+  transition: 150ms;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea:focus {
+  top: -10px;
+  outline: none;
+  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
+  -moz-box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea::-moz-placeholder {
   color: white;
@@ -942,9 +952,6 @@ footer .footer-copyright span {
   font-family: learn-serbian-medium;
   font-size: 20px;
   padding: 10px 5px;
-}
-#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder textarea:focus {
-  outline: none;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-translate .lessons-inner-translate-holder .lessons-inner-translate-textarea-holder .lessons-inner-translate-letters-holder {
   display: flex;
