--- a/src/style/pages/lessons/inner/content/_lessons-inner-translate.scss
+++ b/src/style/pages/lessons/inner/content/_lessons-inner-translate.scss
@@ -66,17 +66,22 @@
             border: 3px solid white;
             border-radius: 10px;
             padding: 10px 5px;
+            position: relative;
+            top: 0;
             resize: none;
-    
+            transition: 150ms;
+            
+            &:focus {
+                top: -10px;
+                outline: none;
+                @include white-shadow;
+            }
+            
             &::placeholder {
                 color: white;
                 font-family: learn-serbian-medium;
                 font-size: set-size(md);
                 padding: 10px 5px;
-            }
-    
-            &:focus {
-                outline: none;
             }
         }
     
