flex-direction updates

--- a/src/style/pages/lessons/inner/_main.scss
+++ b/src/style/pages/lessons/inner/_main.scss
@@ -12,9 +12,8 @@
     @import "./lessons-inner-header";
 
     .lessons-inner-lesson {
-        @include center;
-        flex-direction: column;
-
+        @include center(column);
+        
         @import "./content/main";
     }
 }
