Answer checking algorithms update

--- a/src/style/additional/_variables.scss
+++ b/src/style/additional/_variables.scss
@@ -17,8 +17,10 @@ $grey: #ccc;
 $dark-grey: #2d2a38;
 $blue: #1466c7;
 $purple: #282088;
+$dark-blue: #18234e;
 $dark-purple: #0e1153;
 $pale-blue: #1a1632;
+$pale-purple: #2d2641;
 $pale-red: #170925;
 $red: #b50c0c;
 $yellow: #d1be18;
