--- a/src/style/main.css
+++ b/src/style/main.css
@@ -852,6 +852,32 @@ footer .footer-copyright span {
   background-color: #282088;
   border: 1px solid white;
 }
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder .button-neutral {
+  background-color: #2d2641;
+  border: none;
+  cursor: default;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder .button-neutral:hover {
+  background-color: #2d2641;
+  border: none;
+  cursor: default;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder .button-correct {
+  border: 3px solid green;
+  cursor: default;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder .button-correct:hover {
+  border: 3px solid green;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder .button-wrong {
+  background-color: #18234e;
+  border: 3px solid #b50c0c;
+  cursor: default;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder .lessons-inner-multiple-choice-questions-holder .button-wrong:hover {
+  background-color: #18234e;
+  border: 3px solid #b50c0c;
+}
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-multiple-choice .lessons-inner-multiple-choice-holder button {
   background-color: #2d2a38;
 }
