--- a/src/style/pages/lessons/inner/content/_lessons-inner-translate.scss
+++ b/src/style/pages/lessons/inner/content/_lessons-inner-translate.scss
@@ -101,7 +101,7 @@
         }
     }
 
-    button {
-        background-color: $dark-grey;
+    .button-disabled {
+        @include learn-serbian-disabled-button;
     }
 }
