--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1032,6 +1032,7 @@ footer .footer-copyright span {
   background-color: #1a1632;
   border: 2px solid white;
   border-radius: 30px;
+  position: relative;
   overflow: hidden;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-user-holder {
@@ -1057,6 +1058,74 @@ footer .footer-copyright span {
   color: white;
   font-size: 30px;
 }
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder {
+  width: 100%;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 20px;
+  border-top: 2px solid white;
+  position: absolute;
+  top: 100%;
+  transform: translateY(-100%);
+  padding: 10px 15px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder input {
+  color: white;
+  font-size: 20px;
+  background-color: #170925;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder input:focus {
+  outline: none;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 25px;
+  background-color: #1466c7;
+  border: 1px solid transparent;
+  border-radius: 15px;
+  cursor: pointer;
+  padding: 15px;
+  transition: 300ms;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  position: relative;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder button:hover {
+  background-color: #282088;
+  border: 1px solid white;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder button img {
+  height: 30px;
+  width: 30px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: absolute;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder button {
+  background-color: #2d2a38;
+  border: none;
+  cursor: default;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder button:hover {
+  background-color: #2d2a38;
+  border: none;
+  cursor: default;
+}
+
 @media screen and (min-width: 481px) and (max-width: 768px) {
   header .header-holder {
     padding: 5px 30px;
