--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1027,7 +1027,8 @@ footer .footer-copyright span {
   width: 100%;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display {
-  height: 500px;
+  height: 510px;
+  max-width: 420px;
   width: 100%;
   background-color: #1a1632;
   border: 2px solid white;
@@ -1036,6 +1037,7 @@ footer .footer-copyright span {
   overflow: hidden;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-user-holder {
+  height: 75px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -1045,7 +1047,7 @@ footer .footer-copyright span {
   gap: 15px;
   background-color: #170925;
   border-bottom: 2px solid white;
-  padding: 10px 15px;
+  padding: 0 15px;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-user-holder img {
   height: 55px;
@@ -1058,10 +1060,92 @@ footer .footer-copyright span {
   color: white;
   font-size: 30px;
 }
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder {
+  height: 365px;
   width: 100%;
+  position: relative;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-no-messages {
+  width: 50%;
+  color: white;
+  font-family: learn-serbian-medium;
+  font-size: 25px;
+  text-align: center;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-typing {
+  height: 40px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  background-color: #ccc;
+  border-radius: 30px;
+  border-bottom-left-radius: 0;
+  box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 95%;
+  left: 15px;
+  transform: translateY(-95%);
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-typing .lessons-inner-conversation-display-typing-dot {
+  height: 15px;
+  width: 15px;
+  background-color: #2d2a38;
+  border-radius: 50%;
+  opacity: 0;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-typing #lessons-inner-conversation-display-typing-dot-1 {
+  animation: blinking-1 3s ease-in infinite;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-typing #lessons-inner-conversation-display-typing-dot-2 {
+  animation: blinking-2 3s ease-in infinite;
+}
+#lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-messages-holder .lessons-inner-conversation-display-typing #lessons-inner-conversation-display-typing-dot-3 {
+  animation: blinking-3 3s ease-in infinite;
+}
+@keyframes blinking-1 {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes blinking-2 {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes blinking-3 {
+  0% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0.25;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder {
+  height: 70px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -1072,15 +1156,14 @@ footer .footer-copyright span {
   position: absolute;
   top: 100%;
   transform: translateY(-100%);
-  padding: 10px 15px;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder input {
   color: white;
   font-size: 20px;
   background-color: #170925;
   border: 1px solid white;
-  border-radius: 5px;
-  padding: 5px 10px;
+  border-radius: 15px;
+  padding: 10px 15px;
 }
 #lessons .lessons-inner .lessons-inner-lesson .lessons-inner-conversation .lessons-inner-conversation-holder .lessons-inner-conversation-display .lessons-inner-conversation-display-keyboard-holder input:focus {
   outline: none;
